--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     padding: 0;
     
 }
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
 
 a{
     text-decoration: none;
