--- a/style.css
+++ b/style.css
@@ -160,3 +160,112 @@ nav{
     margin-top: 40px;
 
 }
+.instagramm{
+    width: 30px;
+}
+.logoss{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.createdd{
+    color: red;
+    font-size: 14px;
+    
+}
+footer{
+    padding: 50px 40px;
+    background-color: black;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.created{
+    margin-top: 30px;
+    display: block;
+    text-align: center;
+}
+.insta{
+    color: white;
+    font-size: 20px;
+}
+
+
+@media (max-width: 414px) {
+    a{
+        font-size: 10px;
+    }
+    nav{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 10px;
+
+    }
+    #men{
+        font-size: 18px;
+    }
+   .photo{
+    width: 200px;
+   }
+   .image-for{
+    font-size: 10px;
+   }
+   .for-image{
+    gap: 20px;
+   }
+   .for-logo{
+    font-size: 12px;
+   }
+   .html{
+    width: 20px;
+   }
+   .wrapper-child{
+    padding: 5px;
+    gap: 10px;
+   }
+   #center{
+    font-size: 26px;
+   }
+   .icons{
+    width: 25px;
+   }
+   .wrapper-2{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+}
+.works{
+    padding: 5px;
+   
+}
+.setifikat{
+    font-size: 16px;
+}
+.certi-child{
+    width: 40px;
+}
+.certificates{
+    gap: 10px;
+}
+nav{
+    padding: 0;
+    padding: 10px;
+}
+.insta{
+    font-size: 14px;
+}
+.instagramm{
+    width: 20px;
+
+}
+.created{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+
+}
