--- a/style.css
+++ b/style.css
@@ -59,9 +59,12 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     margin-top: 30px;
+    gap: 20px;
 }
 .image-for{
+    padding-top: 20px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 
@@ -88,6 +91,8 @@ nav{
     display: flex;
     justify-content: space-between;
     padding-top: 30px;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 .for-icon{
     background-color: transparent;
@@ -115,7 +120,10 @@ nav{
 .wrapper-2{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
+    margin-right: auto;
+    margin-left: auto;
 }  
 .ieltss{
     color: black;
@@ -142,6 +150,8 @@ nav{
     margin-top: 40px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 .certi{
     display: flex;
