--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ nav{
     top: 0;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
     border-radius: 10px;
     padding: 30px 50px;
     margin-top: 0;
@@ -202,7 +204,7 @@ footer{
 }
 
 
-@media (max-width: 414px) {
+/* @media (max-width: 414px) {
     a{
         font-size: 10px;
     }
@@ -278,4 +280,4 @@ nav{
 }
 
 
-}
+} */
